ui/assets/css/main.css
/* ==========================================================================
   Base styles
   ========================================================================== */
@import url('https://fonts.googleapis.com/css?family=Roboto');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    color: #212121;
    font-size: 1em;
    line-height: 1.4;
    min-height: 100%;
    position: relative;
}

body {
    font-family: 'Roboto', sans-serif;
    margin: 0 0 70px;
}

.container {
    padding: 30px;
    display: grid;
}

.title {

}

a {
    color: #53e3a6;
    text-decoration: none;
    transition: color 0.3s ease;
}

a:hover {
    color: #f0776c;
}

/* ==========================================================================
   Navbar
   ========================================================================== */

.nav {
    height: 60px;
    width: 100%;
    background: #50a3a2;
    background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
    position: relative;
}

.nav > .nav-header {
    display: inline;
}

.nav > .nav-header > .nav-title {
    display: inline-block;
    font-size: 22px;
    padding: 10px 10px 10px 10px;
}

.nav-title a {
    color: #fff;
}

.nav > .nav-btn {
    display: none;
}

.nav > .nav-links {
    display: inline;
    float: right;
    font-size: 18px;
}

.nav > .nav-links > a {
    display: inline-block;
    padding: 13px 10px 13px 10px;
    text-decoration: none;
    color: #efefef;
}

.nav > .nav-links > a:hover {
    color: #f0776c;
}

.nav > #nav-check {
    display: none;
}


/* ==========================================================================
   Home page
   ========================================================================== */

/* Masonry
   ========================================================================== */

/* Masonry grid */
.meetups {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(auto, auto));
    grid-gap: 10px;
    grid-auto-rows: minmax(180px, auto);
    grid-auto-flow: dense;
    padding-top: 10px;
}

#home .grid-item {
    padding: 1rem;
    background: linear-gradient(to bottom, rgba(33,33,33,.0) 0%, black 100%);
    border-radius: 5px;
    transition: box-shadow .3s;
    position: relative;
    overflow:hidden;
}

#home .grid-item > img{
    object-fit: cover;
    width: 100%;
    height: 100%;
    position:absolute;
    z-index:-1;
    top: 0;
    left: 0;
    transition: all 1s ease;
}

#home .grid-item:hover img{
    transform: scale(1.2);
}

#home .main {
    grid-column-end: span 6;
    grid-row-end: span 2;
}

#home .featured {
    grid-column-end: span 3;
    grid-row-end: span 1;
}

.text-block {
    position: absolute;
    bottom: 20px;
    left: 20px;
    color: white;
    padding-left: 20px;
    padding-right: 20px;
}


/* ==========================================================================
   Sign up and Log in
   ========================================================================== */
#auth {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(auto, auto));
    grid-auto-flow: dense;
    padding: 10px;
}

.auth {
    margin: 20px auto;
    padding: 30px 25px;
    border: 1px solid #c4c4c4;
}

h1.auth-title {
    margin: -28px -25px 25px;
    padding: 15px 25px;
    line-height: 30px;
    font-size: 25px;
    font-weight: 300;
    color: #adadad;
    text-align:center;
    background: #f7f7f7;

}

.auth-input {
    width: 100%;
    height: 50px;
    margin-bottom: 25px;
    padding-left:10px;
    font-size: 15px;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.auth-input:focus {
    border-color:#6e8095;
    outline: none;
}

.auth-button {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
}

.auth-more
{
    text-align: center;
    margin-top: 5px;
    margin-bottom: 0;
}


/* ==========================================================================
   Meetup info
   ========================================================================== */
#meetup {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(auto, auto));
    grid-gap: 10px;
    grid-auto-rows: minmax(180px, auto);
    grid-auto-flow: dense;
}

#meetup .grid-item {
    padding: 1rem;
    background: linear-gradient(to bottom, rgba(33,33,33,.0) 0%, black 100%);
    border-radius: 5px;
    transition: box-shadow .3s;
    position: relative;
    overflow:hidden;
}

#meetup .grid-item > img{
    object-fit: cover;
    width: 100%;
    height: 100%;
    position:absolute;
    z-index:-1;
    top: 0;
    left: 0;
}

#meetup .main {
    grid-column-end: span 6;
    grid-row-end: span 2;
}

#meetup .details {
    background: white;
    grid-column-end: span 4;
}

#meetup .aside {
    background: white;
    grid-column-end: span 2;
    grid-row-end: span 1;
    color: #919A9F;
}

#meetup .aside img {
    border-radius: 50%;
    float: left;
    width: 70px;
    height: 70px;
    margin-right: 15px;
}

.cta-going {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
    margin-top: 10px;
}

/* Meetup page ask question
   ========================================================================== */
#meetup .ask {
    background: white;
}

.ask textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border-radius: 4px;
    background-color: #f8f8f8;
    font-size: 16px;
    resize: none;
}

.ask textarea:focus {
    outline: none;
    border-width: 0;
    box-shadow: 0 0 5px #53e3a6;
}
/* ... */

